[package]
name = "easybox"
version = "0.1.0"
authors = ["efd <eightfingerd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
description = "busybox is something like busybox, but more easy to use."
license = "MIT/Apache-2.0"

[dependencies]
